--- a/bicemodded/localisation/english/resistance_and_occupation_l_english.yml
+++ b/bicemodded/localisation/english/resistance_and_occupation_l_english.yml
@@ -116,7 +116,7 @@
  OCCUPATION_GARRISON_STRENGTH_TOOLTIP:2 "We need $NUMBER|H$ divisions of $SELECTED_TEMPLATE|H$ as garrison to protect against the current resistance.\nThis garrison is currently $PERCENTAGE|H0%$ efficient."
  OCCUPATION_GARRISON_STRENGTH_VARIOUS_TOOLTIP:2 "We need $NUMBER|H$ divisions of various templates as garrison to protect against the current resistance.\nThis garrison is currently $PERCENTAGE|H0%$ efficient."
  OCCUPATION_USE_DEFAULT_TEMPLATE:0 "§HUse default template§!"
- OCCUPATION_BAD_GARRISON_SPECIAL_FORCES:0 "§RYou can't choose this template because it contains special forces battalions.§!"
+ OCCUPATION_BAD_GARRISON_SPECIAL_FORCES:1 "§RYou can't choose this template because it either contains special forces battalions, or this particular template can't be used as a garrison.§!"
  OCCUPATION_BAD_GARRISON_NO_SUPPRESSION:0 "§RYou can't choose this template because its Suppression value is §H0§!.§!"
  OCCUPATION_NO_GARRISON_NEEDED:0 "No Garrison needed"
  OCCUPATION_CURRENT_GARRISON_NO_SUPPRESSION:0 "§RThe Suppression value of a garrison template is §H0§!. Please choose another one.§!"
