--- a/bicemodded/localisation/english/scripted_triggers_l_english.yml
+++ b/bicemodded/localisation/english/scripted_triggers_l_english.yml
@@ -1,1 +1,7 @@
-﻿
+﻿l_english:
+ is_controlled_by_ROOT_or_ally:0 "Controlled by §H[Root.GetNameDef]§! or one of their allies."
+ is_league_of_nations_member_tt:0 "Is a League of Nations Member Country"
+ has_war_with_non_exiled_country_tt:0 "At war with non-exiled country"
+ state_is_fully_controlled_by_ROOT_or_subject_tt:0 "Is fully controlled by §Y[ROOT.GetFlag][ROOT.GetNameDef]§! or any §Y[ROOT.GetAdjective] subject§!"
+ is_at_peace_exiled_countries_excluded_tt:0 "Is at peace (war with exiled countries excluded)"
+ is_alpine_TT:0 "Is alpine State"
