--- a/bicemodded/localisation/english/stats_l_english.yml
+++ b/bicemodded/localisation/english/stats_l_english.yml
@@ -12,7 +12,7 @@
  STAT_COMMON_MAX_ORG:0 "Organization: "
  STAT_COMMON_MAX_ORG_DESC:0 "Organization indicates combat readiness and how organized a unit is. A unit with no organization can't fight or move effectively."
  STAT_COMMON_MAX_ORG_VALUE:0 "$VALUE|H1$"
- STAT_COMMON_MAX_ORG_MOD_VALUE:0 "$VALUE|=+0$"
+ STAT_COMMON_MAX_ORG_MOD_VALUE:2 "$VALUE|=+1$"
  STAT_COMMON_MAX_ORG_DIFF:0 " $VALUE|=+1$"
  STAT_ARMY_DEFAULT_MORALE:0 "Recovery Rate: "
  STAT_ARMY_DEFAULT_MORALE_DESC:0 "How much extra organization can be regained hourly when not in combat."
@@ -49,12 +49,12 @@
  STAT_ARMY_RECON_DESC:1 "The ability to scout ahead and anticipate the enemy. Increases the chance that this unit can pick better tactics in battle and increases the amount of intel gathering from that combat."
  STAT_ARMY_RECON_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_RECON_DIFF:0 " $VALUE|=+1$"
- STAT_ARMY_RECON_MOD_VALUE:0 " $VALUE|=+1$"
+ STAT_ARMY_RECON_MOD_VALUE:1 " $VALUE|=+1%$"
  STAT_ARMY_ENTRENCHMENT:0 "Entrenchment: "
  STAT_ARMY_ENTRENCHMENT_DESC:0 "The ability to make proper defensive entrenchments before a hostile attack. \nEach level gives a §G2%§! advantage in defensive combat."
  STAT_ARMY_ENTRENCHMENT_VALUE:0 "$VALUE|H0$"
  STAT_ARMY_ENTRENCHMENT_DIFF:0 " $VALUE|=+0$"
- STAT_ARMY_ENTRENCHMENT_MOD_VALUE:0 "$VALUE|=+1$"
+ STAT_ARMY_ENTRENCHMENT_MOD_VALUE:1 "$VALUE|=+1%$"
  STAT_ARMY_ENTRENCHMENT_MOD_DIFF:0 " $VALUE|=+1$"
  STAT_ARMY_FUEL_CONSUMPTION:0 "Fuel use: "
  STAT_ARMY_FUEL_CONSUMPTION_DESC:0 "How much fuel this unit uses daily."
@@ -62,15 +62,15 @@
  STAT_ARMY_FUEL_CONSUMPTION_DIFF:0 " $VALUE|=-1$"
  STAT_ARMY_SUPPLY_CONSUMPTION:0 "Supply use: "
  STAT_ARMY_SUPPLY_CONSUMPTION_DESC:0 "How much supply a unit consumes per day."
- STAT_ARMY_SUPPLY_CONSUMPTION_MOD_VALUE:0 "$VALUE|=-2$"
+ STAT_ARMY_SUPPLY_CONSUMPTION_MOD_VALUE:1 "$VALUE|=-1%$"
  STAT_ARMY_SUPPLY_CONSUMPTION_VALUE:0 "$VALUE|H2$"
  STAT_ARMY_SUPPLY_CONSUMPTION_DIFF:0 " $VALUE|=-2$"
  STAT_ARMY_SUPPLY_CONSUMPTION_FACTOR:0 "Supply Usage: "
  STAT_ARMY_SUPPLY_CONSUMPTION_FACTOR_DESC:0 "How much supply a unit consumes per day"
  STAT_ARMY_SUPPLY_CONSUMPTION_FACTOR_VALUE:0 "$VALUE|H2%$"
  STAT_ARMY_SUPPLY_CONSUMPTION_FACTOR_DIFF:0 " $VALUE|=-2%$"
- STAT_ARMY_CASUALTY_TRICKLEBACK:0 "Trickleback: "
- STAT_ARMY_CASUALTY_TRICKLEBACK_DESC:0 "The proportion of losses in combat that can be saved and returned to the manpower pool."
+ STAT_ARMY_CASUALTY_TRICKLEBACK:1 "Trickleback & War Support Protection: "
+ STAT_ARMY_CASUALTY_TRICKLEBACK_DESC:1 "The proportion of losses in combat that can be saved and returned to the manpower pool. Saved Casualties will not impact the war support penalty from casualties and damage."
  STAT_ARMY_CASUALTY_TRICKLEBACK_VALUE:0 "$VALUE|H2%$"
  STAT_ARMY_CASUALTY_TRICKLEBACK_DIFF:0 " $VALUE|=+2%$"
  STAT_ARMY_EXPERIENCE_LOSS_FACTOR:0 "Exp. Loss: "
@@ -79,7 +79,7 @@
  STAT_ARMY_EXPERIENCE_LOSS_FACTOR_DIFF:0 " $VALUE|=-2%$"
  STAT_ARMY_SUPRESSION:0 "Suppression: "
  STAT_ARMY_SUPRESSION_DESC:0 "Ability to suppress local resistance."
- STAT_ARMY_SUPRESSION_MOD_VALUE:0 "$VALUE|=+1$"
+ STAT_ARMY_SUPRESSION_MOD_VALUE:1 "$VALUE|=+1%$"
  STAT_ARMY_SUPRESSION_VALUE:0 "$VALUE|H1$"
  STAT_ARMY_SUPRESSION_DIFF:0 " $VALUE|=+1$"
  STAT_ARMY_SUPRESSION_FACTOR:0 "Suppression Bonus: "
@@ -133,6 +133,26 @@
  STAT_NAVY_TORPEDO_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_NAVY_TORPEDO_ATTACK_DIFF:0 " $VALUE|=+1$"
  STAT_NAVY_TORPEDO_ATTACK_DESC:0 "How much damage we can do when using the ship's torpedoes."
+ STAT_NAVY_TORPEDO_HIT_CHANCE:0 "Torpedo hit chance: "
+ STAT_NAVY_TORPEDO_HIT_CHANCE_VALUE:1 "$VALUE|=+1%$"
+ STAT_NAVY_TORPEDO_HIT_CHANCE_DIFF:0 " $VALUE|=+1$"
+ STAT_NAVY_TORPEDO_HIT_CHANCE_DESC:0 "How likely our torpedoes are to hit."
+ STAT_NAVY_LIGHT_GUN_HIT_CHANCE:0 "Light Battery hit chance: "
+ STAT_NAVY_LIGHT_GUN_HIT_CHANCE_VALUE:1 "$VALUE|=+1%$"
+ STAT_NAVY_LIGHT_GUN_HIT_CHANCE_DIFF:0 " $VALUE|=+1$"
+ STAT_NAVY_LIGHT_GUN_HIT_CHANCE_DESC:0 "How likely our light batteries are to hit."
+ STAT_NAVY_HEAVY_GUN_HIT_CHANCE:0 "Heavy Battery hit chance: "
+ STAT_NAVY_HEAVY_GUN_HIT_CHANCE_VALUE:1 "$VALUE|=+1%$"
+ STAT_NAVY_HEAVY_GUN_HIT_CHANCE_DIFF:0 " $VALUE|=+1$"
+ STAT_NAVY_HEAVY_GUN_HIT_CHANCE_DESC:0 "How likely our heavy batteries are to hit."
+ STAT_NAVY_TORPEDO_DAMAGE_REDUCTION:0 "Torpedo damage reduction: "
+ STAT_NAVY_TORPEDO_DAMAGE_REDUCTION_VALUE:0 "$VALUE|H1$"
+ STAT_NAVY_TORPEDO_DAMAGE_REDUCTION_DIFF:0 " $VALUE|=+1$"
+ STAT_NAVY_TORPEDO_DAMAGE_REDUCTION_DESC:0 "Scales incoming torpedo damage."
+ STAT_NAVY_TORPEDO_ENEMY_CRIT_CHANCE:0 "Incoming Torpedo critical chance: "
+ STAT_NAVY_TORPEDO_ENEMY_CRIT_CHANCE_VALUE:1 "$VALUE|=-1%$"
+ STAT_NAVY_TORPEDO_ENEMY_CRIT_CHANCE_DIFF:0 " $VALUE|=+1$"
+ STAT_NAVY_TORPEDO_ENEMY_CRIT_CHANCE_DESC:0 "How likely enemy torpedoes are to strike critical hits."
  STAT_NAVY_SUB_ATTACK:0 "Depth charges: "
  STAT_NAVY_SUB_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_NAVY_SUB_ATTACK_DIFF:0 " $VALUE|=+1$"
@@ -171,6 +191,7 @@
  STAT_AIR_SUPERIORITY:0 "Air Superiority: "
  STAT_AIR_SUPERIORITY_DESC:0 "How much the plane helps the overall air superiority of a strategic area."
  STAT_AIR_SUPERIORITY_VALUE:0 "$VALUE|H2$"
+ STAT_AIR_SUPERIORITY_DIFF:0 "$VALUE|=+2$"
  STAT_AIR_NAVAL_STRIKE_ATTACK:0 "Naval Attack: "
  STAT_AIR_NAVAL_STRIKE_ATTACK_DIFF:0 " $VALUE|=+1$"
  STAT_AIR_NAVAL_STRIKE_ATTACK_DESC:0 "How much damage the plane inflicts upon hitting a ship."
@@ -180,6 +201,7 @@
  STAT_AIR_NAVAL_STRIKE_AGILITY_DESC:0 ""
  STAT_AIR_NAVAL_STRIKE_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_AIR_NAVAL_STRIKE_TARGETTING_VALUE:0 "$VALUE|H1$"
+ STAT_AIR_NAVAL_STRIKE_TARGETTING_DIFF:0 "$VALUE|=+1$"
  STAT_AIR_NAVAL_STRIKE_AGILITY_VALUE:0 "$VALUE|H1$"
  STAT_AIR_GROUND_ATTACK:0 "Ground Attack: "
  STAT_AIR_GROUND_ATTACK_VALUE:0 "$VALUE|H1$"
@@ -211,12 +233,12 @@
  STAT_NAVY_RANGE_VALUE:0 "$VALUE|H0$ km"
  STAT_NAVY_RANGE_DIFF:0 " $VALUE|=+1$"
  STAT_COMMON_ARMOR:0 "Armor: "
- STAT_COMMON_ARMOR_DESC:0 "Having §HArmor§! that is higher than the opponents §HPiercing§! value makes you take less damage.\n\nFor §GArmy§!: §C33%§! of incoming damage is statically §Gdeflected§!.\n\nFor §CShips§!: up to §C60%§! of incoming damage is §Gdeflected§! and §YCritical Hit§! chance up to §Gdoubled§!, scales with how large the advantage is."
+ STAT_COMMON_ARMOR_DESC:0 "Having §HArmor§! that is higher than the opponents §HPiercing§! value makes you take less damage and also makes it possible to perform more attacks in combat as the unit has more freedom of movement."
  STAT_COMMON_ARMOR_TRAIN_DESC:0 "§HArmor§! increases the amount of damage that can be taken by enemy logistics strikes before this train is destroyed."
  STAT_COMMON_ARMOR_VALUE:0 "$VALUE|H1$"
  STAT_COMMON_ARMOR_DIFF:0 " $VALUE|=+1$"
  STAT_COMMON_PIERCING:0 "Piercing: "
- STAT_COMMON_PIERCING_DESC:0 "Having equal or greater §HPiercing§! to the targets §HArmor§! value allow you to do more damage and more effectively pin down their armored forces. §C33%§! of your organization and strength(HP) damage is §Rdeflected§! if you can't pierce the enemy."
+ STAT_COMMON_PIERCING_DESC:0 "Having equal or greater §HPiercing§! to the targets §HArmor§! value allow you to do more damage and more effectively pin down their armored forces"
  STAT_COMMON_PIERCING_VALUE:0 "$VALUE|H1$"
  STAT_COMMON_PIERCING_DIFF:0 " $VALUE|=+1$"
  STAT_RANGE:0 "Range: "
@@ -227,6 +249,7 @@
  STAT_CARRIER_SIZE_DESC:0 "How many planes a carrier can fit on board."
  STAT_CARRIER_SIZE_VALUE:0 "$VALUE|H0$"
  STAT_CARRIER_SIZE_DIFF:0 " $VALUE|=+0$"
+ STAT_CARRIER_SIZE_MOD_DIFF:0 " $VALUE|=+0$"
  STAT_COMMON_ACCLIMATIZATION_HOT_GAIN:0 "Hot acclimatization gain factor: "
  STAT_COMMON_ACCLIMATIZATION_HOT_GAIN_DESC:1 "The speed at which a unit acclimatizes in a warm climate."
  STAT_COMMON_ACCLIMATIZATION_HOT_GAIN_VALUE:0 "$VALUE|H1%$"
@@ -235,7 +258,11 @@
  STAT_COMMON_ACCLIMATIZATION_COLD_GAIN_DESC:0 "The speed at which a unit acclimatizes in a cold climate."
  STAT_COMMON_ACCLIMATIZATION_COLD_GAIN_VALUE:0 "$VALUE|H1%$"
  STAT_COMMON_ACCLIMATIZATION_COLD_GAIN_DIFF:0 " $VALUE|=+1%$"
- STAT_AIR_BOMBING:0 "Strategic Bombing: "
+ STAT_COMMON_NIGHT_PENALTY:0 "Night Penalty: "
+ STAT_COMMON_NIGHT_PENALTY_VALUE:0 "$VALUE|H1%$"
+ STAT_COMMON_NIGHT_PENALTY_DIFF:0 " $VALUE|=-1%$"
+ STAT_COMMON_NIGHT_PENALTY_DESC:0 "Impact of the night penalty."
+ STAT_AIR_BOMBING:1 "Strat. Bombing: "
  STAT_AIR_BOMBING_DESC:0 "How good a plane is at strategic bombing."
  STAT_AIR_BOMBING_VALUE:0 "$VALUE|*H1$"
  STAT_AIR_BOMBING_DIFF:0 " $VALUE|=+1$"
@@ -272,9 +299,13 @@
  STAT_COMMON_WEIGHT_DESC:0 "How much the unit will weigh. Heavier units will require more transports to ship and perform invasions effectively."
  STAT_COMMON_WEIGHT_VALUE:0 "$VALUE|H1$"
  STAT_COMMON_WEIGHT_DIFF:0 " $VALUE|=-1$"
- STAT_CASUALTY_TRICKLEBACK:0 "Casualty trickleback: "
+ STAT_COMMON_THRUST:0 "Thrust: "
+ STAT_COMMON_THRUST_DESC:1 "Thrust represents the ability of the engine to propel the airplane. Any Thrust exceeding Weight adds extra Speed."
+ STAT_COMMON_THRUST_VALUE:0 "$VALUE|H1$"
+ STAT_COMMON_THRUST_DIFF:0 " $VALUE|=+1$"
+ STAT_CASUALTY_TRICKLEBACK:1 "Casualty Trickleback & War Support Protection: "
  STAT_CASUALTY_TRICKLEBACK_VALUE:0 "$VALUE|H0%$"
- STAT_CASUALTY_TRICKLEBACK_DESC:0 "What percentage of manpower makes it back to the manpower pool after being wounded in combat."
+ STAT_CASUALTY_TRICKLEBACK_DESC:1 "What percentage of manpower makes it back to the manpower pool after being wounded in combat. These casualties will not impact the war support penalty from casualties and damage."
  STAT_NAVY_AMPHIBIOUS_DEFENSE:0 "Amphibious defense"
  STAT_NAVY_AMPHIBIOUS_DEFENSE_VALUE:0 "$VALUE|H0%$"
  STAT_NAVY_AMPHIBIOUS_DEFENSE_DESC:0 "Extra defense given to units while doing amphibious invasions."
@@ -284,12 +315,12 @@
  STAT_NAVY_MINES_PLANTING:0 "Minelaying: "
  STAT_NAVY_MINES_PLANTING_VALUE:0 "$VALUE|H2$"
  STAT_NAVY_MINES_PLANTING_DESC:1 "Efficiency in laying the sea mines."
- STAT_NAVY_MINES_PLANTING_MOD_VALUE:0 "$VALUE|G2$"
+ STAT_NAVY_MINES_PLANTING_MOD_VALUE:1 "$VALUE|=+1%$"
  STAT_NAVY_MINES_PLANTING_DIFF:0 " $VALUE|=+1$"
  STAT_NAVY_MINES_SWEEPING:0 "Minesweeping: "
  STAT_NAVY_MINES_SWEEPING_VALUE:0 "$VALUE|H2$"
  STAT_NAVY_MINES_SWEEPING_DESC:1 "Efficiency in finding and neutralizing the sea mines."
- STAT_NAVY_MINES_SWEEPING_MOD_VALUE:0 "$VALUE|G2$"
+ STAT_NAVY_MINES_SWEEPING_MOD_VALUE:1 "$VALUE|=+1%$"
  STAT_NAVY_MINES_SWEEPING_DIFF:0 " $VALUE|=+1$"
  STAT_NAVY_RAIDING_COORDINATION:1 "Raiding Efficiency: "
  STAT_NAVY_RAIDING_COORDINATION_VALUE:0 "$VALUE|H0%$"
@@ -327,7 +358,7 @@
  STAT_COMMON_FUEL_CONSUMPTION_FACTOR_DIFF:0 " $VALUE|=-2%$"
 
  STAT_NAVY_LG_ATTACK:1 "Light Attack: "
- STAT_NAVY_LG_ATTACK_DESC:0 "Damage done by light guns. Light guns are better at targetting smaller ships."
+ STAT_NAVY_LG_ATTACK_DESC:1 "Damage done by light guns. Light guns are better at targeting smaller ships."
  STAT_NAVY_LG_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_NAVY_LG_ATTACK_DIFF:0 " $VALUE|=+1$"
  STAT_NAVY_LG_ARMOR_PIERCING:1 "Light Piercing: "
@@ -336,7 +367,7 @@
  STAT_NAVY_LG_ARMOR_PIERCING_DIFF:0 " $VALUE|=+1$"
 
  STAT_NAVY_HG_ATTACK:1 "Heavy Attack: "
- STAT_NAVY_HG_ATTACK_DESC:0 "Damage done by the heavy guns. Heavy guns are better at targetting bigger ships."
+ STAT_NAVY_HG_ATTACK_DESC:1 "Damage done by the heavy guns. Heavy guns are better at targeting bigger ships."
  STAT_NAVY_HG_ATTACK_VALUE:0 "$VALUE|H1$"
  STAT_NAVY_HG_ATTACK_DIFF:0 " $VALUE|=+1$"
  STAT_NAVY_HG_ARMOR_PIERCING:1 "Heavy Piercing: "
