--- a/bicemodded/localisation/english/unit_l_english.yml
+++ b/bicemodded/localisation/english/unit_l_english.yml
@@ -211,7 +211,7 @@
  TASK_FORCE_ACTIVITY_DESC_SPOTTING_ENEMY_TRANSFER:0 "£spotting  $PROGRESS|H0$§H%§! Locating a $FLAG$ §Hnaval transfer§! in $REGION|H$"
  TASK_FORCE_ACTIVITY_DESC_SPOTTING_ENEMY_CONVOY:0 "£spotting  $PROGRESS|H0$§H%§! Locating a $FLAG$ §Hconvoy§! in $REGION|H$"
  TASK_FORCE_ACTIVITY_DESC_STRIKE_FORCE_INTERCEPTING:0 "£going_to_combat  Intercepting $TARGET|H$"
- TASK_FORCE_FLEET_INFORMATION_HEADER:0 "§HFleet Information§!\nMaximum Speed: $SPEED|H$\nMaximum Range: $RANGE|H$\n"
+ TASK_FORCE_FLEET_INFORMATION_HEADER:1 "§HFleet Information§!\nMaximum Speed: $SPEED|H$\nMaximum Range: $RANGE|H$\nSub Detection: $SUBDETECTION|H$\nSurface Detection: $SURFACEDETECTION|H$\n"
  TASK_FORCE_FLEET_INFORMATION_SLOWEST_SHIPS:0 "\n§HSlowest Ships§!\n"
  TASK_FORCE_FLEET_INFORMATION_SHORTEST_RANGES:0 "\n§HShortest Ranges§!\n"
  TASK_FORCE_FLEET_INFORMATION_DELAYED:0 "To learn more about individual ship details, select a task force, then click on the ship details portrait."
@@ -223,11 +223,11 @@
  SHIP_AND_TYPE:0 "$SHIP|H$ ($TYPE|H$)"
  LEARNING_TRAITS_TITLE:0 "Learning Traits:"
  LEARNING_TRAITS:0 "$NAME$ ($PERC|%0H$ done)"
- UNIT_MOVEMENT_BLOCKED_BY_STRAIGHT:0 "§RCannot move through straights blocked by enemy fleet.§!"
- UNIT_BLOCKS_STRAIGHT_WITHIN_FRIENDLY:0 "Navy §GBlocks§! straight within $STATE1|H$"
- UNIT_BLOCKS_STRAIGHT_WITHIN_HOSTILE:0 "Navy §RBlocks§! straight within $STATE1|H$"
- UNIT_BLOCKS_STRAIGHT_BETWEEN_FRIENDLY:0 "Navy §GBlocks§! straight between $STATE1|H$ and $STATE2|H$"
- UNIT_BLOCKS_STRAIGHT_BETWEEN_HOSTILE:0 "Navy §RBlocks§! straight between $STATE1|H$ and $STATE2|H$"
+ UNIT_MOVEMENT_BLOCKED_BY_STRAIT:0 "§RCannot move through straits blocked by enemy fleet.§!"
+ UNIT_BLOCKS_STRAIT_WITHIN_FRIENDLY:0 "Navy §GBlocks§! strait within $STATE1|H$"
+ UNIT_BLOCKS_STRAIT_WITHIN_HOSTILE:0 "Navy §RBlocks§! strait within $STATE1|H$"
+ UNIT_BLOCKS_STRAIT_BETWEEN_FRIENDLY:0 "Navy §GBlocks§! strait between $STATE1|H$ and $STATE2|H$"
+ UNIT_BLOCKS_STRAIT_BETWEEN_HOSTILE:0 "Navy §RBlocks§! strait between $STATE1|H$ and $STATE2|H$"
  NO_MOVE_IS_IN_HOME_REPAIRING:0 "$FLEET|H$ is currently repairing in $TARGET|H$. "
  NO_MOVE_HEADING_HOME_TO_REPAIR:0 "$FLEET|H$ is on its way to $TARGET|H$ to repair. "
  NO_MOVE_HEADING_HOME_TO_REPAIR_RESUME:0 "Afterwards, it will continue its last mission ($MIS|H$).\n"
@@ -412,9 +412,9 @@
  SPEED_INFRASTRUCTURE_IMPACT:0 "Infrastructure: $VALUE|+=%$"
  SPEED_STRATEGIC_REDEPLOYMENT_DESC:0 "Strategic redeployment speed $VAUE|H$ km/h"
  SPEED_RETREATING:0 "Retreating: $VALUE|+=%$"
- GOOD_ARMOR_DEFENSE_DESC:0 "If an Enemy Division attacking us is unable to penetrate we will lose $ORG|%0G$ less organization and take $STR|%0G$ less damage.\n"
- GOOD_ARMOR_ATTACK_DESC_STR:0 "If attacking an Enemy Division that cannot penetrate our armour we will do $VAL|%0G$ more damage.\n"
- GOOD_ARMOR_ATTACK_DESC_ORG:0 "If attacking an Enemy Division that cannot penetrate our armour we will reduce their organization by an additional $VAL|%G0$.\n"
+ GOOD_ARMOR_DEFENSE_DESC:1 "If an Enemy Division attacking us is unable to penetrate our armor, we will take up to $ORG|%0G$ less organization and strength damage.\n"
+ GOOD_ARMOR_ATTACK_DESC_STR:2 "If attacking an Enemy Division that cannot penetrate our armor we will do more damage.\n"
+ GOOD_ARMOR_ATTACK_DESC_ORG:2 "\nIf attacking an Enemy Division that can penetrate less than §H50%§! of our armor we will do additional damage."
  PIERCING_GOOD_DESC:0 "The division will not get extra bonuses from being able to penetrate an Enemy Division, but that division will not receive bonuses due to its armour."
  OVERRUN_POPUP:0 "Overrun!"
  PREPERATION_BASE_DAILY_GAIN:0 "Base daily gain: $VALUE|0%Y$"
@@ -443,7 +443,7 @@
  CLICK_TO_HIDE_ARMIES:0 "Click to §HHide§! armies belonging to this group.\n"
  CLICK_TO_SHOW_ARMIES:0 "Click to §HShow§! armies belonging to this group.\n"
  TOGGLE_ARMY_GROUP_VIEW_ARMIES_DIVISIONS:0 "Switch between viewing the armies or divisions in this army group."
- DIVISION_VIEW_SELECT_ARMY:0 "Click to select this division's army."
+ DIVISION_VIEW_SELECT_ARMY:1 "§GClick§! to select this division's army."
  NEW_FLEET_NAME:0 "New Fleet"
  CREATE_FLEET_FROM_SELECTED_TASK_FORCES:0 "§GClick§! to create a new fleet from the selected task forces."
  CANNOT_CREATE_FLEET_FROM_SELECTED_TASK_FORCES:0 "§RCannot create a fleet with the current selection§!"
