--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -279,6 +279,7 @@
  TRIGGER_ANY_CORE_STATE_STARTS:0 "Any core state"
  TRIGGER_ALL_CORE_STATE_STARTS:0 "All core states"
  TRIGGER_ANY_NEIGHBOR_STATE_STARTS:0 "Any neighbor state"
+ TRIGGER_ANY_COUNTRY_WITH_CORE_STARTS:0 "Any country with state core"
  TRIGGER_ALL_NEIGHBOR_STATE_STARTS:0 "All neighbor states"
  TRIGGER_ANY_NEIGHBOR_COUNTRY_STARTS:0 "Any neighbor country"
  TRIGGER_ANY_HOME_AREA_NEIGHBOR_COUNTRY_STARTS:0 "Any neighbor country in the home area"
@@ -372,6 +373,10 @@
  TRIGGER_HAS_NOT_WARGOAL_AGAINST:0 "Does not have a war goal against @$TAG$$COUNTRY|H$"
  TRIGGER_HAS_WARGOAL_OF_TYPE_AGAINST:0 "Has a $TYPE|H$ war goal against @$TAG$$COUNTRY|H$"
  TRIGGER_HAS_NOT_WARGOAL_OF_TYPE_AGAINST:0 "Does not have a $TYPE|H$ war goal against @$TAG$$COUNTRY|H$"
+ TRIGGER_HAS_WAR_WITH_WARGOAL_AGAINST:0 "Has a war with active war goal against @$TAG$$COUNTRY|H$"
+ TRIGGER_HAS_NOT_WAR_WITH_WARGOAL_AGAINST:0 "Does not have a war with active war goal against @$TAG$$COUNTRY|H$"
+ TRIGGER_HAS_WAR_WITH_WARGOAL_OF_TYPE_AGAINST:0 "Has a war with $TYPE|H$ war goal against @$TAG$$COUNTRY|H$"
+ TRIGGER_HAS_NOT_WAR_WITH_WARGOAL_OF_TYPE_AGAINST:0 "Does not have a war with $TYPE|H$ war goal against @$TAG$$COUNTRY|H$"
  TRIGGER_IS_JUSTIFYING_WARGOAL_AGAINST:0 "Is justifying war goal against @$TAG$$COUNTRY|H$"
  TRIGGER_IS_NOT_JUSTIFYING_WARGOAL_AGAINST:0 "Is not justifying war goal against @$TAG$$COUNTRY|H$"
  TRIGGER_HAS_NOT_TEMPLATE_CONTAINING_UNIT:0 "Does not have a division template containing $UNIT|H$"
@@ -396,6 +401,14 @@
  TRIGGER_LESS_THAN_NUM_OWNED_NEIGHBOUR_STATES:0 "$COUNTRY|Y$ owns fewer than $NUM|Y$ neighboring states of $STATE|Y$"
  TRIGGER_MORE_THAN_NUM_CLAIMED_NEIGHBOUR_STATES:0 "$COUNTRY|Y$ has claimed more than $NUM|Y$ neighboring states of $STATE|Y$"
  TRIGGER_LESS_THAN_NUM_CLAIMED_NEIGHBOUR_STATES:0 "$COUNTRY|Y$ has claimed fewer than $NUM|Y$ neighboring states of $STATE|Y$"
+ TRIGGER_MORE_THAN_NUM_DIVISIONS_IN_STATES:0 "Has more than $NUM|Y$ divisions in states"
+ TRIGGER_LESS_THAN_NUM_DIVISIONS_IN_STATES:0 "Has less than $NUM|Y$ divisions in states"
+ TRIGGER_HAS_NUM_DIVISIONS_IN_STATES:0 "Has $NUM|Y$ divisions in states"
+ TRIGGER_HAS_NOT_NUM_DIVISIONS_IN_STATES:0 "Does not have $NUM|Y$ divisions in states"
+ TRIGGER_MORE_THAN_NUM_BATTALIONS_IN_STATES:0 "Has more than $NUM|Y$ battalions in states"
+ TRIGGER_LESS_THAN_NUM_BATTALIONS_IN_STATES:0 "Has less than $NUM|Y$ battalions in states"
+ TRIGGER_HAS_NUM_BATTALIONS_IN_STATES:0 "Has $NUM|Y$ battalions in states"
+ TRIGGER_HAS_NOT_NUM_BATTALIONS_IN_STATES:0 "Does not have $NUM|Y$ battalions in states"
  TRIGGER_HAS_NOT_ELECTIONS:0 "Does not have elections"
  TRIGGER_HAS_ELECTIONS:0 "Has elections"
  TRIGGER_HAS_CUSTOM_DIFFICULTY_ON:0 "Using custom difficulty: $DIFFICULTY$"
@@ -459,10 +472,10 @@
  TRIGGER_LESS_THAN_RESOURCES_IN_STATE:0 "Less than $AMOUNT|H$ $RESOURCE|H$ in $STATE|H$"
  TRIGGER_AT_MOST_RESOURCES_IN_STATE:0 "At most $AMOUNT|H$ $RESOURCE|H$ in $STATE|H$"
  TRIGGER_MORE_THAN_RESOURCES_IN_STATE:0 "More than $AMOUNT|H$ $RESOURCE|H$ in $STATE|H$"
- TRIGGER_AT_LEAST_RESOURCES_IN_COUNTRY: "At least $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
- TRIGGER_LESS_THAN_RESOURCES_IN_COUNTRY: "Less than $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
- TRIGGER_AT_MOST_RESOURCES_IN_COUNTRY: "At most $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
- TRIGGER_MORE_THAN_RESOURCES_IN_COUNTRY: "More than $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
+ TRIGGER_AT_LEAST_RESOURCES_IN_COUNTRY:0 "At least $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
+ TRIGGER_LESS_THAN_RESOURCES_IN_COUNTRY:0 "Less than $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
+ TRIGGER_AT_MOST_RESOURCES_IN_COUNTRY:0 "At most $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
+ TRIGGER_MORE_THAN_RESOURCES_IN_COUNTRY:0 "More than $AMOUNT|H$ $RESOURCE|H$ in $COUNTRY|H$"
  TRIGGER_HAS_NOT_TECH_BONUS:0 "No technology bonus for $TECH|H$"
  TRIGGER_HAS_TECH_BONUS:0 "Has technology bonus for $TECH|H$"
  TRIGGER_HAS_NOT_TECH_CATEGORY_BONUS:0 "No technology bonus for $CATEGORY|H$ category"
@@ -481,6 +494,7 @@
  TRIGGER_DIVISIONS_MORE_THAN:0 "Has more than $AMOUNT|H$ divisions"
  TRIGGER_DIVISIONS_LESS_THAN:0 "Has at least $AMOUNT|H$ divisions"
  TRIGGER_DIVISIONS:0 "Divisions"
+ TRIGGER_NUM_PLANES_BASED_IN_REGION:0 "Number of Planes based in $REGIONS|H$"
  TRIGGER_COUNT_TRIGGERS:0 "At least $AMOUNT|Y$ of the following must be true"
  TRIGGER_IS_TARGET_OF_COUP:0 "Is the target of a coup"
  TRIGGER_IS_NOT_TARGET_OF_COUP:0 "Is not the target of a coup"
@@ -777,7 +791,7 @@
  TRIGGER_HAS_NOT_AIR_LEDGER:0 "Does not have an air ledger"
  TRIGGER_HAS_AIR_LEDGER:0 "Has an air ledger"
  TRIGGER_HAS_NOT_CHARACTER_SLOT:0 "$CHARACTER$ does not have character slot $SLOT|H$"
- TRIGGER_HAS_CHARACTER_SLOT:0 "$CHARACTER$ character slot $SLOT|H$"
+ TRIGGER_HAS_CHARACTER_SLOT:1 "$CHARACTER$ has character slot $SLOT|H$"
  french_communist_civil_war_intervention_tt:0 "Both of the following are true:\n    At War\n    Not actively intervening in the Spanish Civil War"
  TRIGGER_HAS_IDEOLOGY:1 "$NAME|Y$ has ideology $IDEOLOGY|Y$"
  TRIGGER_HAS_NOT_IDEOLOGY:1 "$NAME|Y$ does not have ideology $IDEOLOGY|Y$"
@@ -791,3 +805,79 @@
  TRIGGER_NUM_OF_TOTAL_SUPPLYNODES_LESS_THAN:0 "Fewer Supply Nodes than $NUMBER|H$"
  TRIGGER_LEADER_HAS_IDEOLOGY:0 "$NAME|Y$ has ideology $IDEOLOGY|Y$"
  TRIGGER_LEADER_HAS_NOT_IDEOLOGY:0 "$NAME|Y$ does not have ideology $IDEOLOGY|Y$"
+ TRIGGER_ANY_ARMY_STARTS:0 "Any Division"
+ TRIGGER_UNIT_HAS_NOT_TEMPLATE_MAJORITY:0 "Template is NOT majority $TYPE$"
+ TRIGGER_UNIT_HAS_TEMPLATE_MAJORITY:0 "Template is majority $TYPE$"
+ TRIGGER_ANY_STATE_ARMY_STARTS:0 "Any State Division"
+ TRIGGER_UNIT_STRENGTH:0 "Strength"
+ TRIGGER_UNIT_ORGANIZATION:0 "Organization"
+ TRIGGER_IS_NOT_EMBARGOED_BY:0 "Is not embargoed by $COUNTRY|H$"
+ TRIGGER_IS_EMBARGOED_BY:0 "Is embargoed by $COUNTRY|H$"
+ TRIGGER_IS_NOT_EMBARGOING:0 "Is not embargoing $COUNTRY|H$"
+ TRIGGER_IS_EMBARGOING:0 "Is embargoing $COUNTRY|H$"
+ TRIGGER_UNIT_IS_NOT_RESERVES:0 "Division template is not reserve priority"
+ TRIGGER_UNIT_IS_RESERVES:0 "Division template is reserve priority"
+ TRIGGER_UNIT_HAS_NOT_BATTALION_TEMPLATE:0 "Template does not contain $TYPE$"
+ TRIGGER_UNIT_HAS_BATTALION_TEMPLATE:0 "Template contains $TYPE$"
+
+ TRIGGER_HAS_POWER_BALANCE:0 "$POWER_BALANCE|Y$ is active in [root.GetName]"
+ TRIGGER_HAS_NOT_POWER_BALANCE:0 "$POWER_BALANCE|Y$ is not active in [root.GetName]"
+ TRIGGER_HAS_ANY_POWER_BALANCE:1 "Has an active §HBalance of Power§!"
+ TRIGGER_HAS_NOT_ANY_POWER_BALANCE:1 "Has no active §HBalance of Power§!"
+ TRIGGER_POWER_BALANCE_VALUE_MORE_THAN:1 "The $POWER_BALANCE|Y$ is more than $PERCENT|Y$ on the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_VALUE_LESS_THAN:1 "The $POWER_BALANCE|Y$ is less than $PERCENT|Y$ on the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_DAILY_MORE_THAN:1 "The $POWER_BALANCE|Y$ daily change is more than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_DAILY_LESS_THAN:1 "The $POWER_BALANCE|Y$ daily change is less than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_WEEKLY_MORE_THAN:1 "The $POWER_BALANCE|Y$ weekly change is more than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
+ TRIGGER_POWER_BALANCE_WEEKLY_LESS_THAN:1 "The $POWER_BALANCE|Y$ weekly change is less than $PERCENT|%1Y$ towards the $SIDE|Y$ side"
+
+ TRIGGER_POWER_BALANCE_IN_RANGE:1 "$POWER_BALANCE|Y$ is at the $RANGE|Y$ range"
+ TRIGGER_POWER_BALANCE_NOT_IN_RANGE:1 "$POWER_BALANCE|Y$ is not at the $RANGE|Y$ range"
+ TRIGGER_POWER_BALANCE_BELOW_RANGE:1 "$POWER_BALANCE|Y$ is to the £GFX_BoP_left_texticon£§Yleft§! of the $RANGE|Y$ range"
+ TRIGGER_POWER_BALANCE_NOT_BELOW_RANGE:1 "$POWER_BALANCE|Y$ is at the $RANGE|Y$ range or further £GFX_BoP_right_texticon£§Yright§!"
+ TRIGGER_POWER_BALANCE_ABOVE_RANGE:1 "$POWER_BALANCE|Y$ to the £GFX_BoP_right_texticon£§Yright§! of the $RANGE|Y$ range"
+ TRIGGER_POWER_BALANCE_NOT_ABOVE_RANGE:1 "$POWER_BALANCE|Y$ is at the $RANGE|Y$ range or further £GFX_BoP_left_texticon£§Yleft§!"
+
+ TRIGGER_POWER_BALANCE_SIDE_ACTIVE:1 "$SIDE|Y$ is the active side in $POWER_BALANCE|Y$"
+ TRIGGER_POWER_BALANCE_SIDE_NOT_ACTIVE:1 "$SIDE|Y$ is not the active side in $POWER_BALANCE|Y$"
+ TRIGGER_HAS_POWER_BALANCE_MODIFIER:1 "$POWER_BALANCE|Y$ has modifier $MODIFIER|Y$"
+ TRIGGER_HAS_NOT_POWER_BALANCE_MODIFIER:1 "$POWER_BALANCE|Y$ doesn't have the modifier $MODIFIER|Y$"
+
+ TRIGGER_PC_IS_WINNER:0 "Is a winner in the peace conference"
+ TRIGGER_PC_IS_NOT_WINNER:0 "Is not a winner in the peace conference"
+ TRIGGER_PC_IS_LOSER:0 "Is a loser in the peace conference"
+ TRIGGER_PC_IS_NOT_LOSER:0 "Is not a loser in the peace conference"
+ TRIGGER_PC_IS_LIBERATED:0 "Has been liberated in the peace conference"
+ TRIGGER_PC_IS_NOT_LIBERATED:0 "Has not been liberated in the peace conference"
+ TRIGGER_PC_IS_PUPPETED:0 "Is puppet or has been released as a puppet in the peace conference"
+ TRIGGER_PC_IS_NOT_PUPPETED:0 "Is not a puppet and has not been released as a puppet in the peace conference"
+ TRIGGER_PC_IS_PUPPETED_BY:0 "Is puppet of @$TAG$$COUNTRY|H$ or has been released as a puppet by @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_NOT_PUPPETED_BY:0 "Is not a puppet of @$TAG$$COUNTRY|H$ and has not been released as a puppet by @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_FORCED_GOVERNMENT:0 "Has had their government forcibly changed in the peace conference"
+ TRIGGER_PC_IS_NOT_FORCED_GOVERNMENT:0 "Has not had their government forcibly changed in the peace conference"
+ TRIGGER_PC_IS_FORCED_GOVERNMENT_BY:0 "Has had their government forcibly changed by @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_NOT_FORCED_GOVERNMENT_BY:0 "Has not had their government forcibly changed by @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_FORCED_GOVERNMENT_TO:0 "Has had their government forcibly changed to $IDEOLOGY|H$ in the peace conference"
+ TRIGGER_PC_IS_NOT_FORCED_GOVERNMENT_TO:0 "Has not had their government forcibly changed to $IDEOLOGY|H$ in the peace conference"
+ TRIGGER_PC_IS_ON_SAME_SIDE_AS:0 "Is on same side as @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_NOT_ON_SAME_SIDE_AS:0 "Is not on same side as @$TAG$$COUNTRY|H$ in the peace conference"
+ TRIGGER_PC_IS_ON_WINNING_SIDE:0 "Is on the winning side in the peace conference"
+ TRIGGER_PC_IS_NOT_ON_WINNING_SIDE:0 "Is not on the winning side in the peace conference"
+ TRIGGER_PC_IS_UNTOUCHED_LOSER:0 "Is an untouched loser in the peace conference"
+ TRIGGER_PC_IS_NOT_UNTOUCHED_LOSER:0 "Is not an untouched loser in the peace conference"
+ TRIGGER_PC_IS_NOT_CLAIMED_BY:0 "Is not claimed by $COUNTRY$"
+ TRIGGER_PC_IS_CLAIMED_BY:0 "Is claimed by $COUNTRY$"
+ TRIGGER_PC_TOTAL_SCORE:0 "Total peace conference score"
+ TRIGGER_PC_CURRENT_SCORE:0 "Current peace conference score"
+ TRIGGER_PC_DOES_STATE_STACK_DISMANTLED:0 "State got stacked with dismantle in the peace conference"
+ TRIGGER_PC_DOES_STATE_NOT_STACK_DISMANTLED:0 "State did not get stacked with dismantle in the peace conference"
+ TRIGGER_PC_DOES_STATE_STACK_DEMILITARIZED:0 "State got stacked with demilitarize in the peace conference"
+ TRIGGER_PC_DOES_STATE_NOT_STACK_DEMILITARIZED:0 "State did not get stacked demilitarize in the peace conference"
+
+ BOMBING_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Bombing"
+ CASUALTIES_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Casualties"
+ CONVOYS_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Sunk Convoys"
+
+ TRIGGER_HAS_RESOURCES_RIGHT:0 "$COUNTRY|H$ has all the rights to $RESOURCES|H$"
+ TRIGGER_HAS_NOT_RESOURCES_RIGHT:0 "$COUNTRY|H$ does not have all the rights to $RESOURCES|H$"
+ TRIGGER_OVERLORD:0 "Overlord"
