--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -980,9 +980,9 @@
  germany.226.d:0 "The 46th Infantry Division was formed in 1938 under the command of Generalmajor Paul von Hase. It fought in the invasion of Poland in 1939, and the following year was engaged in fighting in France. It remained there into 1941 and then participated in the invasion of Yugoslavia in April. During the invasion of the Soviet Union, it was attached to Army Group South and marched through the Ukraine and into the Crimea.\nIn March 1945, the division was designated a Volksgrenadier formation, the 46th Volksgrenadier Division. With its numbers depleted, the division surrendered to the Soviets in May 1945."
  germany.226.a:0 "Create 46. ID."
  germany.226.b:0 "No need."
- germany.227.t:0 "Ordering 50. Inf.-Div."
- germany.227.d:0 "The 50. Infanterie Division was a German infantry-division in World War II. It was formed on 26 August 1939 from the Grenzkommandantur Küstrin."
- germany.227.a:0 "Create 50. ID."
+ germany.227.t:0 "Ordering 50. and 72. Inf.-Div."
+ germany.227.d:0 "The 50. Infanterie Division was formed on 26 August 1939 from the Grenzkommandantur Küstrin. The 72. Infanterie-Division was formed on 19 September 1939 from Grenz-Division Trier."
+ germany.227.a:0 "Create them"
  germany.227.b:0 "No need."
  
  germany.2280.t:0 "Bohemia has been reunited with Germany!"
@@ -997,10 +997,6 @@
  germany.229.d:0 "After Czechoslovakia was taken over by Germany, it was adopted by the German Army, seeing service in the invasions of Poland, France and Russia. Production ended in 1942, when its armament was deemed inadequate. In all, over 1400 were manufactured. The chassis continued to be produced for the Marder III (1942-1944) with some of its components used in the later Jagdpanzer 38 (1944-1945) tank destroyers, turretless assault guns, anti-tank guns and anti-aircraft guns.\nThe Panzer 38(t) performed well in the Polish Campaign in 1939 and the Battle of France in 1940. It was better armed than the Panzer I and Panzer II tanks. It was on a par with most light tank designs of the era, although it was unable to effectively engage the frontal armour of medium, heavy and infantry tank designs."
  germany.229.a:0 "Use the 38(t) design and form the 7. Pz.-Div."
  germany.229.b:0 "No need."
- germany.230.t:0 "Ordering and mobilising 72. Inf.-Div."
- germany.230.d:0 "The 72. Infanterie-Division was formed on 19 September 1939 from Grenz-Division Trier. After breaking out of the Cherkassy pocket in February 1944, it was withdrawn to Poland. It was refitted there in March 1944 as part of the 24. Welle from Schatten-Division Generalgouvernement. Reformed again after suffering heavy losses at the Baronow bridgehead on the Vistula, the division surrendered to the Red Army in May 1945 in the Erzgebirge region of Czechoslovakia."
- germany.230.a:0 "Create 72. Inf.-Div."
- germany.230.b:0 "No need."
  germany.231.t:0 "Groß-Deutschland Regiment"
  germany.231.d:0 "In the first week of 1939, Hitler ordered that the Wach Regiment (Guard Regiment) - the unit created in early 1921, to offset the threat of revolution, be renamed Infanterie Regiment Großdeutschland. The unit was now to have a permanent cadre, and unlike other regiments of the Heer (Army) which were raised from a particular region, the recruits of the Großdeutschland were to be drawn from across the nation. The unit was officially activated on 14 June 1939, and the occasion was marked by a parade through the streets of the capital.\n\nThe regiment was being reorganized in September 1939, and did not take part in Fall Weiss, a fact that dented the pride of the regiment which bore the name of the nation on their sleeves."
  germany.231.a:0 "Create the regiment."
