germany from map branch

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -670,7 +670,7 @@
  GER_reichsarbeitsdienst_desc:0 "The Reichsarbeitsdienst was an Organisation in which young men and later women worked for the nation. We can decide to send them to factories or to build up our country! It also will help when they later become soldiers because they will need less training!"
  GER_reichsarbeitsdienst_I:0 "Expanded Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_I_desc:0 "Now that we control so much of Europe, we can expand the Reichsarbeitsdienst and get much more people to work for our glorious nation."
- GER_reichsarbeitsdienst_I_tt:0 "This will improve your Reichsarbeitsdienst National Spirit."
+ GER_reichsarbeitsdienst_I_tt:0 "This will §Gimprove§! your §YReichsarbeitsdienst National Spirit.§!"
  GER_expand_cooperation_between_military_and_civilian_industry:0 "Expand Cooperation Between Military and Civilian Industry"
  GER_expand_cooperation_between_military_and_civilian_industry_desc:0 "Cooperation between our armament industry and our civilian industry can increase efficiency and help them find synergies. This idea comes from a General named Georg Thomas who was leading the armament department of the Wehrmacht for some time."
  GER_organisation_todt:0 "Organisation Todt"
@@ -820,7 +820,7 @@
  GER_expand_peenemuende_research_center_desc:0 "Rocket propulsion holds the key to massive innovations in all three of the military branches."
  GER_wunderwaffe:0 "Wunderwaffe"
  GER_wunderwaffe_desc:0 "Heisenberg and von Braun are chomping at the bit to explore certain ideas they have for true doomsday weapons. All they need is extra resources..."
- GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\n and a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\n and a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
+ GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\nand a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\nand a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
  GER_mounaineer_commanders_tt:0 "You will receive a §Y3 Skill§! §GWar Hero§!, §GMountaineer§! and §GRanger§! §CCorps Commander§! Eduard Dietl.\n"
  GER_artillery_commanders_tt:0 "You will receive a §Y3 Skill§! §GBrilliant§!, §GArtillery Officer§! and §GEngineer§! §CCorps Commander§! Wilhelm von Leeb.\n"
  GER_mol_rib_pact:0 "Molotov-Ribbentrop Pact"
@@ -941,9 +941,13 @@
  GER_africa_korps_desc:0 "We should send Rommel with 2 Tank divisions to help the Italians in Africa, we need to get the Suez Canal!"
  GER_achtung_minen:0 "Achtung Minen"
  GER_achtung_minen_desc:0 "By using a large number of mines in the desert, we can get a huge defense advantage especially in the small coastline in north Africa!"
- GER_achtung_minen_effect:0 "Enables §HAchtung Minen§!\n§HDesert Support Unit\n    Desert§!\n      Defense: §G+10%§!\n"
+ GER_achtung_minen_effect:0 "Enables §HAchtung Minen§!\n§HDesert Support Unit:§!\nDesert\n  Defense: §G+10%§!\n"
  achtung_minen:0 "Achtung Minen"
  achtung_minen_desc:0 "By using a large number of mines we can get a defensive advantage."
+ GER_goliath:0 "Goliath"
+ GER_goliath_desc:0 "By using remote controlled explosive carriers (Leichte Ladungsträger) we will be able to increase our dmg and attack possibilities again forts greatly."
+ GER_goliath_effect:0 "Enables §HGoliath§!\n§HChance for combat to damage enemy forts:§! §G+10%§!\n§HDamage enemy forts receive from combat:§! §G+10%§!\n§HEngineer:§!\nFort\n  Attack: §G+5%§!\n§REach Engineer batallion in your army NEEDS 2 additional radio and support equipment!§!\n"
+ GER_goliath_effect_desc:0 "By using remote controlled explosive carriers we will be able to succeed in attacking every fort."
  GER_secure_middle_east:0 "Influence the Middle East"
  GER_secure_middle_east_desc:0 "We should try to get Saudi Arabia, Turkey, Iran and Iraq into our zone of influence."
  GER_support_the_golden_square:0 "Secure Iraq"
@@ -1050,8 +1054,10 @@
  GER_alsace_lorraine_threat:0 "Germany Reasserted Alsace-Lorraine Claims"
  GER_kampfgruppes:0 "Kampfgruppen"
  GER_kampfgruppes_desc:0 "Our experience shows that combined-arms warfare is the way of the future. If we apply the Prussian doctrine of mission command to combined-arms warfare, our military can increase efficiency and effectiveness by forming "Kampfgruppes", ad hoc military formations designed to complete a specific task."
- GER_artillery_expansion:0 "Artillerie Expansion"
- GER_artillery_expansion_desc:0 "The Treaty of Versailles sought to limit Germany's field artillery to just 284 pieces in total, but this laughable restriction is no obstacle to the Reich now. A powerful Germany needs a powerful Heer, and a powerful Heer needs powerful guns!"
+ GER_artillery_expansion:0 "Artillery Expansion"
+ GER_artillery_expansion_desc:0 "Our new way of War requires more powerful guns than just light artillery, it is time to expand our arsenal with heavy guns!"
+ GER_artillery_support:0 "Artillery Support"
+ GER_artillery_support_desc:0 "The Treaty of Versailles sought to limit Germany's field artillery to just 284 pieces in total, but this laughable restriction is no obstacle to the Reich now. A powerful Germany needs a powerful Heer, and a powerful Heer needs powerful guns!"
  GER_infanterie_tactics:0 "Infanterie Tactics"
  GER_infanterie_tactics_desc:0 "Infantry tactics have come a long way since the Great War. If we apply the General Staff's recent advancements in military thought to real-life experiences, the backbone of the Wehrmacht may become more unshakable than ever before."
  GER_Heer_expansion:0 "Form the Volkssturm"
@@ -1068,16 +1074,23 @@
  mobile_defense_bonus:0 "Mobile Defense Bonus"
  GER_try_to_use_anti_air_as_anti_tank_weapon:0 "Multi-Purpose Guns"
  GER_try_to_use_anti_air_as_anti_tank_weapon_desc:0 "The Flak 88 can fill both anti-air and anti-tank roles. German gunners in both field artillery and anti-aircraft units are trained in how to engage tanks, their guns equipped with the sights to do so, and (especially in the case of the Flak 88) they have the armour-piercing rounds to do so."
- GER_anti_air_as_anti_tank_weapon_effect:0 "Enables §HUse Anti-Air on Tanks§!\nMotorized Heavy Anti-Air :\n	Piercing: §G+15%§!\n	Hard Attack: §G+10%§!\n		Air Attack: §G-10%§!\n"
+ GER_anti_air_as_anti_tank_weapon_effect:0 "Enables §HUse Anti-Air on Tanks§!\n§HMotorized Heavy Anti-Air:§!\nPiercing: §G+15%§!\n	Hard Attack: §G+10%§!\n		Air Attack: §G-10%§!\n"
  GER_anti_air_as_anti_tank_weapon_effect_create_variant:0 "This will also create a variant greatly improving the Piercing of the heavy AA equipment!"
  anti_air_as_anti_tank_weapon:0 "Use Anti-Air on Tanks"
  anti_air_as_anti_tank_weapon_desc:0 "By using a our Heavy Anti-Air Guns we can pierce heavy enemy Tanks!"
  GER_bewegungskrieg:0 "Bewegungskrieg"
  GER_bewegungskrieg_desc:0 "“Bewegungskrieg”, or “lightning war”, advocates the usage of highly-concentrated mobile firepower that can exploit breakthroughs and quickly conduct full combined arms operation deep into enemy territory. We should move to quickly adopt this revolutionary doctrine since the painful memories of sluggish trench warfare from the Weltkrieg are still fresh on the minds of our people and the Oberkommando der Wehrmacht."
+ GER_stellungskrieg:0 "Stellungskrieg"
+ GER_stellungskrieg_desc:0 "“Bewegungskrieg”, or “static war”, advocates the usage of highly-concentrated firepower that can exploit the enemies weaknesses and pushes them back on the whole front!"
  GER_auftragstaktik:0 "Auftragstaktik"
  GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
- GER_befehlstaktik:0 "Ritter von Leeb"
- GER_befehlstaktik_desc:0 ""
+ GER_auftragstaktik_tt:0 "You will receive the §YTank Radio Tech§! if you have completed §GBewegungskrieg§!\nYou will receive §YDivisional HQ Radio Tech§! if you have completed §GStellungskrieg§!\nIf you have the §Yaccording technology§! already researched you will receive a §Ytech bonus§! for electronics instead!"
+ GER_mechanized_offensive:0 "Mechanized Offensive"
+ GER_mechanized_offensive_desc:0 ""
+ GER_improved_ground_air_coordination:0 "Improved Ground Air Coordination"
+ GER_improved_ground_air_coordination_desc:0 ""
+ GER_terrortaktiken:0 "Terrortaktiken"
+ GER_terrortaktiken_desc:0 ""
  GER_gebirgs:0 "Gebirgsjäger"
  GER_gebirgs_desc:0 "Gebirgsjäger are the light infantry part of the alpine or mountain troops of Germany, Austria and Switzerland."
  GER_nachtjaeger:0 "Nachtgefecht"
@@ -1095,6 +1108,8 @@
  GER_rocket_artillery_desc:0 "Rocket artillery cannot usually match the accuracy and sustained rate of fire of conventional gun artillery. They may be capable of very destructive strikes by delivering a large mass of explosives simultaneously, thus increasing the shock effect and giving the target less time to take cover."
  GER_rail_artillery:0 "Schwere Gustav"
  GER_rail_artillery_desc:0 " "
+ GER_improved_medium_tank:0 "Panther"
+ GER_improved_medium_tank_desc:0 ""
  GER_sturmgeschutz:0 "Sturmgeschütz"
  GER_sturmgeschutz_desc:0 "Sturmgeschütz (or StuG) meaning "assault gun" were a series of armored vehicles used by both the Wehrmacht and the Waffen-SS armored formations; which consisted primarily of the StuG III and StuG IV."
  GER_fast_light_tanks:0 "Schnelle Panzer"
@@ -1114,14 +1129,16 @@
  GER_Panzer_division:0 "Panzer-Division"
  GER_Panzer_division_desc:0 "The old "Leichte Divisions" have proven too thin-skinned to do their jobs as armor, but not maneuverable enough to fully replace cavalry. The next generation of tanks must have tougher armor and more powerful armaments, even if there is a slight cost in speed."
  GER_Panzer_Division_1937_unit_tt:0 "Gain a template with §Y4 Light Armor§! and §Y2 Medium Armor§! and §Y5 Motorized§! and §Y1 Armored Car§!  and §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
- GER_liecht_division:0 "Leichte Division"
- GER_liecht_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
+ GER_leichte_division:0 "Leichte Division"
+ GER_leichte_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
  GER_Leichte_Pz_Division_unit_tt:0 "Gain a fresh division with §Y4 Light Armor§!, §Y4 Motorized§!, §Y3 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
  GER_Wehrmacht:0 "Wehrmacht"
  GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
 
  GER_achtung_panzer:0 "Achtung Panzer!"
  GER_achtung_panzer_desc:0 ""Achtung - Panzer!" is a book written by Heinz Guderian. Evaluating the development and use of the first tanks during the Great War, Guderian argues that traditional cavalry should be replaced with mechanised infantry, and that the use of armored vehicles will play a key role in the use of "mobile" warfare tactics."
+ GER_die_abwehr_von_leeb:0 "Die Abwehr!"
+ GER_die_abwehr_von_leeb_desc:0 "Die Abwehr! is a book written by Wilhelm Ritter von Leeb. Evaluating the Experience gained in the Great War, von Leeb argues that the only way to win in trench warfare is the superior use of concentrated artillery attacks in Coordination with the Luftwaffe."
  GER_Schutzstaffel_focus:0 "Schutzstaffel"
  GER_Schutzstaffel_focus_desc:0 "The Schutzstaffel, or "SS", is a paramilitary group that directly serves Adolf Hitler and the Nazi Party. What began as a simple security detachment for NSDAP meetings has grown under the leadership of Heinrich Himmler into a powerful and feared tool for Hitler's totalitarian regime.  *** Pick Himmler as a minister to further expand the SS and recruit elite combat formations."
  GER_Schutzstaffel_focus_2:0 "Schutzstaffel Expansion"
@@ -1241,8 +1258,8 @@
  SWI_improve_mountain_training:0 "Improve the Mountain Training"
  SWI_improve_mountain_training_desc:0 "Our Swiss climbers are renowned for their skill and courage, we should put more emphasis on using their expertise to train the new generation of soldiers in mountainous terrain."
  SWI_mountain_training_effect:0 "Enables §HAlpen Training§!\n§HMountain Support Unit\n    Mountain§!\n      Defense: §G+10%§!\n"
- alpen_training:0 "Alpen Training"
- alpen_training_desc:0 "By fully utilising the terrain we can get a defensive advantage."
+ SWI_alpen_training_effect:0 "Alpen Training"
+ SWI_alpen_training_effect_desc:0 "By fully utilising the terrain we can get a defensive advantage."
  SWI_further_motorisation:0 "Further Motorization"
  SWI_further_motorisation_desc:0 "We need to make sure that our army can move quickly enough to close any possible enemy breakthroughs! Being quick enough to exploit openings in the enemy line is also a tempting thought."
  SWI_armed_and_neutral:0 "Armed Neutrality"
