Italy stuff from BBA Reset victory points GFX to vanilla Reset unit experience levels (for divs, air wings and ships) to vanilla names and icons.

--- a/bicemodded/localisation/english/core_l_english.yml
+++ b/bicemodded/localisation/english/core_l_english.yml
@@ -1037,6 +1037,16 @@
  TRAINING_ATTRITION:0 "Exercise: $VALUE$"
  UNITS_VIEW_BTN_TRAIN_UNITS_TOOLTIP:1 "Click to start an §Gexercise§! with this army. The units will consume equipment while gaining Experience. Your country will also gain £army_experience Army Experience from each unit whose Experience Level is at least $VAL|Y$ - $NAME|Y$"
  UNITS_VIEW_BTN_TRAIN_UNITS_TOOLTIP_SHIFT_CLICK_INFO:0 "Shift Click to start an §Gexercise§! that will last until all units are trained."
+ UNIT_LEVEL_0:0 "Green"
+ UNIT_LEVEL_1:0 "Trained"
+ UNIT_LEVEL_2:0 "Regular"
+ UNIT_LEVEL_3:0 "Seasoned"
+ UNIT_LEVEL_4:0 "Veterans"
+ SHIP_LEVEL_0:0 "Fresh"
+ SHIP_LEVEL_1:0 "Trained"
+ SHIP_LEVEL_2:0 "Regular"
+ SHIP_LEVEL_3:0 "Seasoned"
+ SHIP_LEVEL_4:0 "Veterans"
  AIR_WING_LEVEL_0:1 "Rookies"
  AIR_WING_LEVEL_1:0 "Trained"
  AIR_WING_LEVEL_2:0 "Regular"
