--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1728,7 +1728,7 @@ italian_focus:0 "Italian National Focus"
  ITA_japan_friend:0 "Befriend Japan"
  ITA_japan_friend_desc:0 "The Japanese are much like us; a young, hungry power with a positive demography, held ransom by trade from waning plutodemocracies like the UK and the Netherlands. We should unite with them to form a vibrant naval power across the oceans!"
  appoint_messe:0 "A §Y3 Skill§! §GArmor Officer§!, §GWar Hero§! and §GTrickster§! General named §YGiovanni Messe§! will appear."
- appoint_ambrosio:0 "A §Y3 Skill§! §GEngineer§! and §GRanger§! General named §YVittorio Ambrosio§! will appear."
+ appoint_ambrosio:0 "A §Y3 Skill§! §GCavalry Officer§! and §GRanger§! General named §YVittorio Ambrosio§! will appear."
  ITA_industrial_war_effort:0 "Industrial War Effort"
  ITA_industrial_war_effort_desc:0 "Our Industry needs to be ready for War!"
  ITA_seek_help_from_german_scientists:0 "Seek help from german scientists"
@@ -1877,7 +1877,7 @@ ITA_interventionsist_desc:0 "Mussolini will through the power of the council and
 ITA_radio:0 "Utilitaria"
 ITA_radio_desc:0 "Small and speedy, it's ideal for the traffic of the frontline!"
 ITA_bonifica:0 "Drain the Swamp"
-ITA_bonifica_desc:0 "The swamp of the Agro Pontino near Rome has been the cause of death and suffering for centuries. The Duce is gonna do the impossible!"
+ITA_bonifica_desc:0 "The foundation of a strong fascist society is the land itself and the people who work it. There are still many areas in Italy where we can gain useful land by draining swamps and irrigating farmland."
 ITA_cinecitta:0 "Partito Nazionale Fascista"
 ITA_cinecitta_desc:0 "The fascist party rules supreme! The recent efforts to stengthen Mussolini position have solidified the party's position, it is virtually unchallenged! The high popularity will enable us to incorporate old Italian provinces we controll."
 ITA_dux_mea_lux:0 "Dux Mea Lux"
